fix: overflow issue

--- a/first-search/first-search.css
+++ b/first-search/first-search.css
@@ -1,10 +1,11 @@
 /* ===== HEADER ===== */
 .second-header {
+  z-index: 100;
   width: 100%;
   height: 158px;
   display: flex;
   flex-direction: column;
-  position: relative;
+  position: sticky;
   top: 60px;
 }
 /* ----- TOP ----- */
@@ -86,8 +87,7 @@
   display: flex;
   flex-direction: column;
   gap: 48px;
-  position: fixed;
-  top: 218px;
+  /* margin-top: 218px; */
   padding: 24px 240px;
 }
 /* ----- RESULT ----- */
