--- a/old.css
+++ b/old.css
@@ -11,12 +11,13 @@ input {
 
 /* ===== HEADER ===== */
 .old-header {
+  z-index: 100;
   width: 100%;
   height: 60px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  position: fixed;
+  position: sticky;
   top: 0;
   /* gap: 24px; */
   padding: 4px 32px;
